[gd_scene load_steps=11 format=2]

[ext_resource path="res://Config/BaseScene.tscn" type="PackedScene" id=1]
[ext_resource path="res://Objects/Mechanisms/door/door1.png" type="Texture" id=2]
[ext_resource path="res://Objects/Mechanisms/BlockMovment/BlockMovment.gd" type="Script" id=3]
[ext_resource path="res://Dialogue NPC/Base/Quest.tscn" type="PackedScene" id=4]
[ext_resource path="res://Dialogue NPC/Gnom/Gnom.tscn" type="PackedScene" id=5]
[ext_resource path="res://Dialogue NPC/Base/scripts/quest_moveObject.gd" type="Script" id=6]
[ext_resource path="res://Objects/Mechanisms/BlockMovment/targetObject.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 7 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 13.5, 37.5 )

[sub_resource type="RectangleShape2D" id=3]

[node name="Block_movement" instance=ExtResource( 1 )]
position = Vector2( 2, 3 )

[node name="Entrace" parent="." index="1"]
scene = "Center"

[node name="BlockMovmentObject" type="KinematicBody2D" parent="." index="2"]
position = Vector2( 216, 58 )
script = ExtResource( 3 )
speed = 0.5

[node name="forward" type="Area2D" parent="BlockMovmentObject" index="0"]
position = Vector2( 0, -90 )
collision_layer = 32
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlockMovmentObject/forward" index="0"]
position = Vector2( -1, 52 )
shape = SubResource( 1 )

[node name="backward" type="Area2D" parent="BlockMovmentObject" index="1"]
position = Vector2( 0, -13 )
collision_layer = 32
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlockMovmentObject/backward" index="0"]
position = Vector2( 0, 52 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlockMovmentObject" index="2"]
position = Vector2( -0.5, -1.5 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="BlockMovmentObject" index="3"]
modulate = Color( 0.164706, 0.164706, 0.164706, 1 )
self_modulate = Color( 0.792157, 0.788235, 0.843137, 1 )
position = Vector2( 0, -13 )
scale = Vector2( 0.3, 0.5 )
texture = ExtResource( 2 )

[node name="Gnom" parent="." index="3" instance=ExtResource( 5 )]
position = Vector2( 535, 222 )
quest_name = "Gnom"
description = "Przesun blok"
d_bring = "/Testing_levels/Quest/Gnom/G1-accept"
d_pending = "/Testing_levels/Quest/Gnom/G1-pending"
d_delivered = "/Testing_levels/Quest/Gnom/G1-moved"
d_end = "/Testing_levels/Quest/Gnom/G1-end"

[node name="Quest" parent="Gnom" index="4" instance=ExtResource( 4 )]
script = ExtResource( 6 )

[node name="Gnom2" parent="." index="4" instance=ExtResource( 5 )]
position = Vector2( 498, 42 )
quest_name = "Pan"
description = "Quest NPC Pan"
d_bring = "/Testing_levels/Quest/Gnom/G1-accept"
d_pending = "/Testing_levels/Quest/Gnom/G1-pending"
d_delivered = "/Testing_levels/Quest/Gnom/G1-moved"
d_end = "/Testing_levels/Quest/Gnom/G1-end"

[node name="Quest" parent="Gnom2" index="4" instance=ExtResource( 4 )]
script = ExtResource( 6 )

[node name="Gnom3" parent="." index="5" instance=ExtResource( 5 )]
position = Vector2( 103, 177 )
quest_name = "Lizard"
description = "hejo to quest lizarda"
d_bring = "/Testing_levels/Quest/Gnom/G1-accept"
d_pending = "/Testing_levels/Quest/Gnom/G1-pending"
d_delivered = "/Testing_levels/Quest/Gnom/G1-moved"
d_end = "/Testing_levels/Quest/Gnom/G1-end"

[node name="Quest" parent="Gnom3" index="4" instance=ExtResource( 4 )]
script = ExtResource( 6 )

[node name="Gnom4" parent="." index="6" instance=ExtResource( 5 )]
position = Vector2( 324, 270 )
quest_name = "Tedy"
description = "jeste tedy"
d_bring = "/Testing_levels/Quest/Gnom/G1-accept"
d_pending = "/Testing_levels/Quest/Gnom/G1-pending"
d_delivered = "/Testing_levels/Quest/Gnom/G1-moved"
d_end = "/Testing_levels/Quest/Gnom/G1-end"

[node name="Quest" parent="Gnom4" index="4" instance=ExtResource( 4 )]
script = ExtResource( 6 )

[node name="Area2D" type="Area2D" parent="." index="7"]
position = Vector2( 217, 276 )
script = ExtResource( 7 )
QuestName = "Gnom"

[node name="target" type="CollisionShape2D" parent="Area2D" index="0"]
shape = SubResource( 3 )

[connection signal="body_entered" from="Entrace" to="Entrace" method="_on_Entrace_body_entered"]
[connection signal="body_entered" from="BlockMovmentObject/forward" to="BlockMovmentObject" method="_on_forward_body_entered"]
[connection signal="body_exited" from="BlockMovmentObject/forward" to="BlockMovmentObject" method="_on_forward_body_exited"]
[connection signal="body_entered" from="BlockMovmentObject/backward" to="BlockMovmentObject" method="_on_backward_body_entered"]
[connection signal="body_exited" from="BlockMovmentObject/backward" to="BlockMovmentObject" method="_on_backward_body_exited"]
[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_Area2D_body_entered"]
[connection signal="right_position" from="Area2D" to="Gnom/Quest" method="_on_Area2D_right_position"]
